# accuracyDebtDataParallel

./: .gitignore  README.md  run_quantom.sh  runner.py
applications/quantom-ips/: .flake8  .pre-commit-config.yaml  LICENSE.txt  README.md  pyproject.toml
applications/quantom-ips/data/: data.npy  do_numpy.py
applications/quantom-ips/docs/: jupyterhub_install.md
applications/quantom-ips/examples/dalitz_analysis/: create_dalitz_data.py  create_data.sh  dalitz_environment.py  dalitz_optimizer.py  dalitz_theory.py  debug_dalitz.ipynb  gen_3body_phase_space.py  run_dalitz_analysis.py  submit_dalitz_local.sh
applications/quantom-ips/examples/multi_gaussian/: eval_mg.py  mg_analysis.py  mg_environment.py  mg_objective.py  mg_optimizer.py  mg_parser.py  mg_pipeline.py  mg_trainer.py  model_utils.py  run_mg.py  submit_eval_local.sh  submit_training_ifarm.sh  submit_training_local.sh
applications/quantom-ips/src/: quantom_ips_adapter.py
applications/quantom-ips/src/quantom_ips/: __about__.py
applications/quantom-ips/src/quantom_ips/analyses/: base_analysis.py  ddp_base_analysis.py  distributed_base_analysis.py  hvd_base_analysis.py
applications/quantom-ips/src/quantom_ips/data/: do_numpy.py
applications/quantom-ips/src/quantom_ips/datasets/: quantom_data.npy
applications/quantom-ips/src/quantom_ips/drivers/: ddp_mpi_training_workflow.py  ddp_training_workflow.py  distributed_multi_data_training_workflow.py  distributed_multi_data_training_workflow_v2.py  distributed_training_workflow.py  hvd_training_workflow.py  (+2 more)
applications/quantom-ips/tests/: __init__.py  conftest.py  test_distributed_base_environment_v1.py  test_distributed_numpy_parser.py  test_duke_and_owens_theory.py  test_loits_1d.py  test_loits_2d.py  test_multi_numpy_parser.py
(+144 files in other folders)
