[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "quantom-ips"
dynamic = ["version"]
description = 'The QuantOm collaboration Inverse Problem Solver (IPS) package'
readme = "README.md"
requires-python = ">=3.8"
license = "MIT"
keywords = []
authors = [
  { name = "Steven Goldenberg", email = "sgolden@jlab.org" },
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: Implementation :: CPython",
  "Programming Language :: Python :: Implementation :: PyPy",
]
dependencies = []

[project.urls]
Documentation = "https://github.com/quantom-collab/quantom-ips#readme"
Issues = "https://github.com/quantom-collab/quantom-ips/issues"
Source = "https://github.com/quantom-collab/quantom-ips"

[tool.hatch.version]
path = "src/quantom_ips/__about__.py"

[tool.hatch.envs.types]
extra-dependencies = [
  "mypy>=1.0.0",
]
[tool.hatch.envs.types.scripts]
check = "mypy --install-types --non-interactive {args:src/quantom_ips tests}"

[tool.coverage.run]
source_pkgs = ["quantom_ips", "tests"]
branch = true
parallel = true
omit = [
  "src/quantom_ips/__about__.py",
]

[tool.coverage.paths]
quantom_ips = ["src/quantom_ips", "*/quantom-ips/src/quantom_ips"]
tests = ["tests", "*/quantom-ips/tests"]

[tool.coverage.report]
exclude_lines = [
  "no cov",
  "if __name__ == .__main__.:",
  "if TYPE_CHECKING:",
]
